# PikabuTagBot

PikabuBot/: CMakeLists.txt  PikabuBot_ru_RU.ts  collectingpostsdialog.cpp  collectingpostsdialog.h  collectingpostsdialog.ui  editingdata.cpp  editingdata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkpagepostsparser.cpp  networkpagepostsparser.h  networksearchposts.cpp  networksearchposts.h  tagmanager.cpp  tagmanager.h
PikabuBot/browser/: browser.cpp  browser.h  browserwindow.cpp
